--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+### Beginning of default java .gitignore ###
+
 # Compiled class file
 *.class
 
@@ -21,3 +23,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+### End of default java .gitignore ###
+
+src/Main.java
+build.bat
